Generate listener manager methods into own interfaces